# cyf

./: README.md
01.output-and-error-handling/: README.md
01.output-and-error-handling/client/: main.go
01.output-and-error-handling/go-client/: main.go
01.output-and-error-handling/rs-client/src/: main.rs
01.output-and-error-handling/rs-server/: Cargo.toml
01.output-and-error-handling/rs-server/src/: main.rs
01.output-and-error-handling/rust/client/: Cargo.toml
02.cli-files/: README.md
02.cli-files/go-cat/: .gitignore  go.mod
02.cli-files/go-ls/: .gitignore
02.cli-files/go/go-cat/: main.go
02.cli-files/rs-ls/src/: main.rs
02.cli-files/rust/rs-ls/: Cargo.toml
03.file-parsing/go-parser/: .gitignore  binary.go  entity.go  go.mod  main.go
03.file-parsing/go/go-parser/: binary.go  csv.go  entity.go  json.go  main.go
03.file-parsing/rs-parser/src/: binary.rs  csv.rs  entity.rs  main.rs
03.file-parsing/rust/rs-parser/: Cargo.toml
04.http-server/go-server/: go.mod  main.go  middleware.go
04.http-server/go/go-server/: handler.go  main.go  middleware.go
04.http-server/rs-server/src/: handler.rs  router.rs  types.rs
04.http-server/rust/rs-server/: Cargo.toml
04.http-server/rust/rs-server/src/: handler.rs  lib.rs  main.rs  middleware.rs  router.rs
04.http-server/tester/: Report.md  run.sh
05.server-database/go-server-db/: database.go  error.go  go.mod  go.sum  handler.go  image.go  main.go  verifier.go
05.server-database/rs-server-db/: Cargo.toml
05.server-database/rs-server-db/src/: dto.rs  (+9 more)
05.server-database/sql/: create_table.sql
(+11 files in other folders)
